# LAAB

./: .gitignore  README.md  pyproject.toml
configs/: ae.yaml  anchors.yaml  attractors.yaml  eval.yaml
scripts/: compute_iterates.py  decomp_l2.py  diagnose_ae.py  make_figures.py  run_e0.py  run_e1.py  run_e2.py  run_e3.py  run_e4.py  run_e5.py  train_ae.py  train_relative_decoder.py
src/: config.py  depths.py  metrics.py
src/analysis/: __init__.py  ae_diagnostics.py  basins.py  consistency.py
src/attractors/: iterates.py  iteration.py  snapshot.py  uniqueness.py
src/data/: mnist.py
src/experiments/: __init__.py  base.py  e0_baseline.py  e1_mixed.py  e2_anchors.py  e3_stitching.py  e4_full.py  e5_basins.py
src/models/: __init__.py  autoencoder.py  decoder.py  encoder.py  relative_decoder.py  trainer.py
src/relative/: cosine_map.py  representations.py
src/store/: anchors.py  checkpoints.py
src/viz/: anchor_consistency.py  basin_consistency.py  class_tails.py  convergence.py  decoded_attractors.py  delta_curve.py  delta_kde.py  figure_maker.py  latent_scatter.py  metric_curves.py  reconstruction_grid.py  stitching_fig.py
